feat(file): file and image manage

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,22 @@ DB_NAME=DB_TEST
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=MySecr3tPassWord@as2
+DB_PASSWORD=MySecr3tPass@as2a
+
+HOST_API=http://localhost:3000/api
+JWT_SECRED=FDSAFDSAFDSAFD$F@#Q%$#RTEGFVCBGFDSGFET%$@TRESGF
 
 MAIL_HOST=
 MAIL_USER=
 MAIL_PASSWORD=
 MAIL_COM=
-MAIL_PORT=
+MAIL_PORT=2525
 
-HOST_API=http://localhost:3000/api
-JWT_SECRED=FDSAFDSAFDSAFD$F@#Q%$#RTEGFVCBGFDSGFET%$@TRESGF
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
 
+
+UNPLASH_KEY=
+UNPLASH_URL=https://api.unsplash.com/search/photos
