--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3'
 
 services:
+  nestjs:
+    build: 
+      context: .
+      dockerfile: DockerFile
+    env_file:
+      - .env
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+
   db:
     image: postgres:14.3
     restart: always
